--- a/rockpapergame.html
+++ b/rockpapergame.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stone Paper Scissor</title>
 </head>
-<link rel="stylesheet" href="stonepaper.css">
+<link rel="stylesheet" href="rockpapergame.css">
 <body>
     <div class="heading">
         <h1>Rock Paper Scissors</h1>
@@ -34,6 +34,6 @@
     <div class="bottom">
         <div class="message">SELECT ONE</div>
     </div>
-    <script src="stonepaper.js"></script>
+    <script src="rockpapergame.js"></script>
 </body>
 </html>
